--- a/data/promo.yml
+++ b/data/promo.yml
@@ -1,5 +1,22 @@
-fr:
-  title: Promotion pour Décembre et Janvier
-  description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
-  btntxt: En savoir plus
-  btnurl: /promotion
+general:
+  fr:
+    title: Promotion pour Décembre et Janvier
+    description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
+    btntxt: En savoir plus
+    btnurl: /promotions
+  en:
+    title: Promotion pour Décembre et Janvier
+    description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
+    btntxt: En savoir plus
+    btnurl: /promotions
+services:
+  fr:
+    title: Rendez-vous en ligne
+    description: Réservez une plage horaire avec un expert facilement grâce à notre systèmes de réservation en ligne !
+    btntxt: En savoir plus
+    btnurl: /rendez-vous
+  en:
+    title: Promotion pour Décembre et Janvier
+    description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
+    btntxt: En savoir plus
+    btnurl: /promotions
