Last fixes before pushing online

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -4,7 +4,7 @@ socials:
   twitterurl: ''
   youtubeurl: ''
   instagramurl: 'https://www.instagram.com/laire_visuelle/'
-  googleplusurl: '#'
+  googleplusurl: ''
   pinteresturl: ""
   vimeourl: ""
   dribbleurl: ""
