--- a/data/promo.yml
+++ b/data/promo.yml
@@ -3,20 +3,20 @@ general:
     title: Promotion pour Décembre et Janvier
     description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
     btntxt: En savoir plus
-    btnurl: /promotions
+    btnurl: promotions
   en:
     title: Promotion pour Décembre et Janvier
     description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
     btntxt: En savoir plus
-    btnurl: /promotions
+    btnurl: promotions
 services:
   fr:
     title: Rendez-vous en ligne
     description: Réservez une plage horaire avec un expert facilement grâce à notre systèmes de réservation en ligne !
     btntxt: En savoir plus
-    btnurl: /rendez-vous
+    btnurl: rendez-vous
   en:
     title: Promotion pour Décembre et Janvier
     description: 50% sur les montures sélectionnées à l'achat d'une paire de verres
     btntxt: En savoir plus
-    btnurl: /promotions
+    btnurl: promotions
