--- a/data/settings.yml
+++ b/data/settings.yml
@@ -20,9 +20,9 @@ address:
   country:
 phone: '(450) 669-1686'
 mphone: '+14506691686'
-email: 'info@airevisuelle.com'
+email: 'info@lairevisuelle.com'
 sitedescription: "L'Aire Visuelle vous offre des prix compétitif et un service d'optométrie et de lunetterie imbattable dans la région de Laval"
-sitetitle: "L'Aire Visuelle | Optométriste , Opticient et Lunetterie à Laval"
+sitetitle: "L'Aire Visuelle | Optométriste , Opticien et Lunetterie à Laval"
 titleautocompletion: false
 defaultsocialimage: "/img/logo-share.jpg"
 removefromexternalsearch: true
