Fixed image and promo

--- a/data/promo.yml
+++ b/data/promo.yml
@@ -1,7 +1,7 @@
 general:
   fr:
     title: Promotion pour Février
-    description: 50$ de rabais sur les montures Prada
+    description: 50$ de rabais sur les montures de la collection Prada
     btntxt: En savoir plus
     btnurl: promotions
   en:
