--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -1,40 +1,48 @@
 equipe:
   - name: Suzie Pelletier 
+    nameen: Suzie Pelletier 
     title: Opticienne
     titleen: Optician
     ordre: 1
     group: ood
   - name: Pierluigi Merolla 
+    nameen: Pierluigi Merolla 
     title: Opticien
     titleen: Optician
     ordre: 2
     group: ood
   - name: Laurent Brassard 
+    nameen: Laurent Brassard
     title: Opticien
     titleen: Optician
     ordre: 3
     group: ood
   - name: Laura Tang 
+    nameen: Laura Tang
     title: Opticienne
     titleen: Optician
     ordre: 4
     group: ood
   - name: Docteur Sylvain Duquette 
+    nameen: Doctor Sylvain Duquette
     title: Optométriste
     titleen: Optometrist
     ordre: 5
     group: od
   - name: Docteure Geneviève Brassard 
+    nameen: Doctor Geneviève Brassard
     title: Optométriste
     titleen: Optometrist
     ordre: 6
     group: od
   - name: Docteure Marie-Pier Gascon 
+    nameen: Doctor Marie-Pier Gascon
     title: Optométriste
     titleen: Optometrist
     ordre: 7
     group: od
   - name: Docteur Tristan Gauthier 
+    nameen: Doctor Tristan Gauthier 
     title: Optométriste
     titleen: Optometrist
     ordre: 8
