Fixed opening for Easter

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -20,6 +20,8 @@ address:
   country: Canada
 ouverture:
   fr:
+    - jour: Fermé
+      heures: Samedi 31 mars et lundi 2 avril
     - jour: Lundi - Jeudi
       heures: 08:00 - 20:00
     - jour: Vendredi
@@ -29,6 +31,8 @@ ouverture:
     - jour: Dimanche
       heures: Fermé
   en:
+    - jour: Closed
+      heures: Saturday March 31st and Monday April 2nd
     - jour: Monday - Thursday
       heures: 08:00 - 20:00
     - jour: Friday
