--- a/data/settings.yml
+++ b/data/settings.yml
@@ -20,6 +20,8 @@ address:
   country: Canada
 ouverture:
   fr:
+    - jour: Lundi 25 juin et 2 juillet
+      heures: FERMÉ
     - jour: Lundi - Jeudi
       heures: 09:00 - 20:00
     - jour: Vendredi
@@ -29,6 +31,8 @@ ouverture:
     - jour: Dimanche
       heures: Fermé
   en:
+    - jour: Monday June 25h and July 2nd
+      heures: CLOSED
     - jour: Monday - Thursday
       heures: 09:00 - 20:00
     - jour: Friday
