--- a/data/settings.yml
+++ b/data/settings.yml
@@ -20,6 +20,8 @@ address:
   country: Canada
 ouverture:
   fr:
+    - jour: Lundi 3 septembre
+      heures: Fermé
     - jour: Lundi - Jeudi
       heures: 09:00 - 20:00
     - jour: Vendredi
@@ -29,6 +31,8 @@ ouverture:
     - jour: Dimanche
       heures: Fermé
   en:
+    - jour: Monday September 3rd
+      heures: Closed
     - jour: Monday - Thursday
       heures: 09:00 - 20:00
     - jour: Friday
