--- a/data/settings.yml
+++ b/data/settings.yml
@@ -20,6 +20,10 @@ address:
   country: Canada
 ouverture:
   fr:
+    - jour: 24-25-26-31 Décembre 2018
+      heures: FERMÉ
+    - jour: 1-2 Janvier 2019
+      heures: FERMÉ
     - jour: Lundi - Jeudi
       heures: 09:00 - 20:00
     - jour: Vendredi
@@ -29,6 +33,10 @@ ouverture:
     - jour: Dimanche
       heures: Fermé
   en:
+    - jour: 24-25-26-31 December 2018
+      heures: CLOSED
+    - jour: 1st-2nd January 2019
+      heures: CLOSED
     - jour: Monday - Thursday
       heures: 09:00 - 20:00
     - jour: Friday
