--- a/data/globals.yml
+++ b/data/globals.yml
@@ -4,4 +4,4 @@ form:
   lname:
   subject:
   message:
-rdvlink: "https://pp.lairevisuelle.com/PP11020/User/List?Company=384D91A1-09C1-4615-B0AC-2FE440E9957A"
+rdvlink: "https://booking.opto.com/5d4c72368c0f8/laire-visuelle-optometristes-opticiens/"
