--- a/data/settings.yml
+++ b/data/settings.yml
@@ -45,4 +45,4 @@ sitetitle: "L'Aire Visuelle | Optométriste , Opticien et Lunetterie à Laval"
 titleautocompletion: false
 defaultsocialimage: "/img/logo-share.jpg"
 removefromexternalsearch: false
-rdvlink: "https://pp.lairevisuelle.com/PP11020/User/List?Company=384D91A1-09C1-4615-B0AC-2FE440E9957A"
+rdvlink: "https://booking.opto.com/5d4c72368c0f8/laire-visuelle-optometristes-opticiens/"
