Modifications pour Février 2020

--- a/data/promo.yml
+++ b/data/promo.yml
@@ -1,12 +1,12 @@
 general:
   fr:
-    title: Du 1er décembre au 31 janvier
-    description: Obtenez jusqu'à 50% de rabais sur les montures sélectionnées.
+    title: Promotions du mois
+    description: Consultez les promotions en cours pour le mois.
     btntxt: En savoir plus
     btnurl: promotions
   en:
-    title: From December 1st to January 31
-    description: Get up to 50% discount on selected glasses.
+    title: Monthly promotions
+    description: Check out our active promotions for the month.
     btntxt: More details
     btnurl: en/promotions
 services:
@@ -23,10 +23,10 @@ services:
 footer:
   image: /img/opticien-1.jpg
   fr:
-    title: Du 1er décembre au 31 janvier
-    description: Obtenez jusqu'à 50% de rabais sur les montures sélectionnées.
+    title: Promotions du mois
+    description: Consultez les promotions en cours pour le mois.
     link: promotionsPage
   en:
-    title: From December 1st to January 31
-    description: Get up to 50% discount on selected glasses.
+    title: Monthly promotions
+    description: Check out our active promotions for the month.
     link: promotionsPage
