banner text & link updates;

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -45,7 +45,7 @@ sitetitle: "L'Aire Visuelle | Optométriste , Opticien et Lunetterie à Laval"
 titleautocompletion: false
 defaultsocialimage: "/img/logo-share.jpg"
 removefromexternalsearch: false
-rdvlink: "https://booking.opto.com/5d4c72368c0f8/laire-visuelle-optometristes-opticiens/"
+rdvlink: "https://www.visionavenue.ca/"
 
 info_banner:
   fr:
