--- a/data/settings.yml
+++ b/data/settings.yml
@@ -59,10 +59,14 @@ defaultsocialimage: "/img/logo-share.jpg"
 removefromexternalsearch: false
 rdvlink: "https://www.visionavenue.ca/"
 
+shopping:
+  fr:
+    text: Magasiner en ligne
+  en:
+    text: Shop online
+
 info_banner:
   fr:
     - text: Retour graduel aux activités habituelles suite au déconfinement. En savoir plus en cliquant ici.
-      #url: /deconfinement
   en:
     - text: Gradual return to usual activities following deconfinement. For more information, click here.
-      #url: https://www.visionavenue.ca/
