Changements top bar+ changement du lien magasiner en ligne

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -67,6 +67,6 @@ shopping:
 
 info_banner:
   fr:
-    - text: Retour graduel aux activités habituelles suite au déconfinement. En savoir plus en cliquant ici.
+    - text: Nous serons fermé le 31 décembre ainsi que le 1er janvier.
   en:
-    - text: Gradual return to usual activities following deconfinement. For more information, click here.
+    - text: We will be closed on December 31 and January 1st.
